--- a/tests/build-documentation.ipynb
+++ b/tests/build-documentation.ipynb
@@ -2,13 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!/usr/bin/env python\n",
-    "# coding: utf-8\n",
-    "\n",
     "import sys, os, git\n",
     "import shutil\n",
     "import numpy as np\n",
@@ -16,7 +13,8 @@
     "\n",
     "from utilities import detect_saving_folder, try_to_copy_file, \\\n",
     "                      return_file_content, detect_block_code, \\\n",
-    "                      detect_block_types, create_file, detect_last_matching_line \\\n",
+    "                      detect_block_types, create_file, detect_last_matching_line, \\\n",
+    "                      append_content\n",
     "\n",
     "current_path = os.getcwd()\n",
     "git_repo = git.Repo(current_path, search_parent_directories=True)\n",
@@ -33,37 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False False True False True\n",
-      "\n",
-      "\n",
-      "class Prepare:\n",
-      "    def __init__(self,\n",
-      "                number_atoms=[10],  # List\n",
-      "                epsilon=[0.1],  # List - Kcal/mol\n",
-      "                sigma=[1],  # List - Angstrom\n",
-      "                atom_mass=[1],  # List - g/mol\n",
-      "                *args,\n",
-      "                **kwargs):\n",
-      "        self.number_atoms = number_atoms\n",
-      "        self.epsilon = epsilon\n",
-      "        self.sigma = sigma\n",
-      "        self.atom_mass = atom_mass\n",
-      "        super().__init__(*args, **kwargs)\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# In chapter 1, all the files are simply created.\n",
-    "for chapter_id in [1, 2]: # np.arange(10):\n",
+    "for chapter_id in np.arange(10):\n",
     "    filename = path_to_docs + \"chapter\"+str(chapter_id)+\".rst\"\n",
     "    created_files = []\n",
     "    if os.path.exists(filename):\n",
@@ -73,29 +45,54 @@
     "        block_contents, block_names = detect_block_code(file_content)\n",
     "        block_types = detect_block_types(block_contents)\n",
     "        created_files = create_file(block_contents, block_names, created_files, folder)\n",
+    "        for content, name, type in zip(block_contents, block_names, block_types):\n",
+    "            append_content(folder, name, content, type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[False, False, False, False, False]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (560269670.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[10], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    elif (ISMETHOD) & (ISPARTIAL is False):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "\n",
-    "for content, name, type in zip(block_contents, block_names, block_types):\n",
-    "    if \"test_\" not in name:\n",
-    "        ISIMPORT, ISMETHOD, ISCLASS, ISPARTIAL, ISINIT = type\n",
-    "        original_file_content = return_file_content(folder+name+\".py\")\n",
-    "        if ISIMPORT:\n",
-    "            # Add the content at the start of the file\n",
-    "            file = open(folder+name+\".py\", \"w\")\n",
-    "            for line in content:\n",
-    "                file.write(line)\n",
-    "            for line in original_file_content:\n",
-    "                file.write(line)\n",
-    "            file.close()\n",
+    "\n",
+    "\n",
+    "\n",
     "        elif (ISMETHOD) & (ISPARTIAL is False):\n",
-    "            # Add the content at the end of the file, with an indentation\n",
-    "            file = open(folder+name+\".py\", \"w\")\n",
-    "            for line in original_file_content:\n",
-    "                file.write(line)\n",
-    "            for line in content:\n",
-    "                file.write(\"    \"+line)\n",
-    "            file.close()\n",
-    "        elif ISPARTIAL:\n",
+    "\n",
+    "        elif ISPARTIAL & ISINIT:\n",
+    "            method_name = \"__init__\"\n",
     "            # Add the content to the end of the __init__ method\n",
     "            cpt_new_last, cpt_old_last = detect_last_matching_line(content, original_file_content)\n",
     "            file = open(folder+name+\".py\", \"w\")\n",
@@ -107,8 +104,16 @@
     "            for line in original_file_content[cpt_old_last:]:\n",
     "                file.write(line)\n",
     "            file.close()\n",
+    "            original_file_content = return_file_content(folder+name+\".py\")\n",
+    "            original_start, original_end = detect_method_boundaries(method_name,\n",
+    "                                                                    original_file_content)\n",
+    "            unique_lines = detect_unique_lines(original_file_content, original_start, original_end)\n",
+    "            replace_method(folder, name, original_file_content, unique_lines, original_start, original_end)\n",
+    "        elif ISCLASS:\n",
+    "            stop\n",
     "\n",
     "        else:\n",
+    "            \n",
     "            print(ISIMPORT, ISMETHOD, ISCLASS, ISPARTIAL, ISINIT)\n",
     "            for line in content:\n",
     "                print(line[:-1])\n",
@@ -117,140 +122,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['\\n',\n",
-       " '\\n',\n",
-       " 'def __init__(self,\\n',\n",
-       " '    (...)\\n',\n",
-       " '    super().__init__(*args, **kwargs)\\n',\n",
-       " '    self.calculate_LJunits_prefactors()\\n',\n",
-       " '\\n']"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "content"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name = \"Prepare\"\n",
-    "# Remove doublons in init functions\n",
-    "original_class = open(folder+name+\".py\", \"r\")\n",
-    "original_start_init = None\n",
-    "original_end_init = []\n",
-    "original_content = []\n",
-    "for cpt, l in enumerate(original_class):\n",
-    "    original_content.append(l)\n",
-    "    if (\"def\" in l) & (\"__init__\" in l):\n",
-    "        original_start_init = cpt\n",
-    "    elif (\":\" in l) & (\"def\" in l) & (\"__init__\" not in l):\n",
-    "        original_end_init.append(cpt)        \n",
-    "original_end_init = original_end_init[0]\n",
-    "original_class.close()\n",
-    "\n",
-    "# detect unique lines\n",
-    "_, idx = np.unique(original_content[original_start_init:original_end_init], return_index=True)\n",
-    "new_bloc = []\n",
-    "for i in np.sort(idx):\n",
-    "    new_bloc.append(original_content[original_start_init:original_end_init][i])\n",
-    "\n",
-    "REPLACED = False\n",
-    "new_class = open(folder+name+\".py\", \"w\")\n",
-    "for cpt, l in enumerate(original_content):\n",
-    "    if (cpt < original_start_init) | (cpt > original_end_init-2):\n",
-    "        new_class.write(l)\n",
-    "    else:\n",
-    "        if REPLACED is False:\n",
-    "            REPLACED = True\n",
-    "            for ll in new_bloc:\n",
-    "                new_class.write(ll)\n",
-    "new_class.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['    def __init__(self,\\n',\n",
-       " '                *args,\\n',\n",
-       " '                **kwargs):\\n',\n",
-       " '        super().__init__(*args, **kwargs)\\n',\n",
-       " '        self.calculate_LJunits_prefactors()\\n',\n",
-       " '        self.nondimensionalize_units_0()\\n',\n",
-       " '        self.identify_atom_properties()\\n',\n",
-       " '    \\n',\n",
-       " '\\n']"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_bloc\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4, 11)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cpt_new_last, cpt_old_last"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n'"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_line"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -264,23 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "end_init = original_empty_lines[original_empty_lines\n",
-    "                                > original_position_class][0]\n",
-    "new_class = open(folder+class_name_i+\".py\", \"w\")\n",
-    "for cpt, l in enumerate(original_content):\n",
-    "    new_class.write(l)\n",
-    "    if cpt == end_init+1:\n",
-    "        for ll in myclass:\n",
-    "            # Make sure the line is not already in\n",
-    "            # before writting it\n",
-    "            # ALREADYIN = False\n",
-    "            # for lll in original_content:\n",
-    "            #     if ll in lll:\n",
-    "            #         ALREADYIN = True\n",
-    "            if (\"def __init__\" not in ll) & (\"(...)\" not in ll): #  & (ALREADYIN is False):\n",
-    "                new_class.write(\"    \"+ll)\n",
-    "\n",
-    "new_class.close()"
+    "name"
    ]
   },
   {
